templates/calipsoplus-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: calipsoplus
  name: calipsoplus
