templates/calipsodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
  name: calipsodb
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
status:
  loadBalancer: {}
