templates/web-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web-front
  name: web-front
  namespace: calipsoplus
spec:
  type: ClusterIP
  ports:
    - name: frontend
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: web-front
status:
  loadBalancer: {}
